--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/redsocial?serverTimezone=America/Lima
-spring.datasource.username=root
-spring.datasource.password=cibertec
+#spring.datasource.url=jdbc:mysql://localhost:3306/redsocial?serverTimezone=America/Lima
+#spring.datasource.username=root
+#spring.datasource.password=cibertec
+
+
+spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net:3306/sql10418161?serverTimezone=America/Lima
+spring.datasource.username=sql10418161
+spring.datasource.password=wj6tUggdIk
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= none 
